# idoleyes

./: .gitignore  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  default.nix  flake.nix
idol_api/: Cargo.toml
idol_api/src/: lib.rs  model_calls.rs  models.rs  state.rs  team_pair.rs
idol_bot/: Cargo.toml  sqlx-data.json
idol_bot/migrations/: 20210225155644_create_webhooks.sql  20210225225048_add_liftcord.sql  20210226023156_add_rowid.sql  20210226141037_create_algorithms.sql  20210226145059_remove_liftcord.sql
idol_bot/src/: db.rs  events.rs  lib.rs  logger.rs  main.rs  oauth_listener.rs
idol_historical/: Cargo.toml
idol_historical/src/: lib.rs  main.rs
idol_predictor/: Cargo.toml
idol_predictor/src/: algorithms.rs  lib.rs
src/: lib.rs  main.rs
