[package]
name = "idol_api"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_with = "1.5.1"
log = "0.4.11"
