[package]
name = "idol_bot"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
dotenv = "0.15.0"
fern = { version = "0.6.0" }
log = "0.4.11"
idol_predictor = { path = "../idol_predictor" }
idol_api = { path = "../idol_api" }
rand = "0.7.3"
async-std = { version = "1.9.0", features = ["attributes"] }
surf = "2.1.0"
async-sse = "5.0.0"
http-types = "2.10.0"
sqlx = { version = "0.5.1", features = ["sqlite", "runtime-async-std-native-tls", "offline"] }
tide = "0.16.0"
futures = "0.3.13"
libsystemd = "0.2.1"
