[package]
name = "idol_historical"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
idol_api = { path = "../idol_api" }
idol_predictor = { path = "../idol_predictor" }
serde_json = "1.0.59"
