[package]
name = "idol_predictor"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
anyhow = "1.0.33"
serde = { version = "1.0.116", features = ["derive"] }
serde_with = "1.5.1"
noisy_float = "0.1.13"
average = "0.10.6"
either = "1.6.1"
join-lazy-fmt = "0.9.2"
log = "0.4.11"
