[package]
name = "idol_predictor"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
noisy_float = "0.1.13"
average = "0.10.6"
either = "1.6.1"
join-lazy-fmt = "0.9.2"
idol_api = { path = "../idol_api" }
paste = "1.0.1"
